samples/_failures_safe/1761494051_ff96a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_529be0ea.c: In function ‘main’:
./samples/SAFE/__tmp_529be0ea.c:147:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  147 |     char* level_names
      |     ^~~~
./samples/SAFE/__tmp_529be0ea.c:147:5: error: expected declaration or statement at end of input
